--- a/index.html
+++ b/index.html
@@ -1,15 +1,19 @@
 <!DOCTYPE html>
 <html lang="en-us">
 
+<!-- Website description -->
+<title>Horiseon Social Marketing | Website Management</title>
 <head>
-    <meta charset="UTF-8" />
+    <meta charset="Horiseon Website" />
     <link rel="stylesheet" href="./assets/css/style.css">
+    <meta name="description" content="Horiseon web services">
+    <meta name="keywords" content="Horiseon, seo, solutions, social media, reputation ">
     <title>website</title>
 </head>
-
+<!-- This body allowed for user to click and be placed at the respective click's location on the website -->
 <body>
     <div class="header">
-        <h1>Hori<span class="seo">seo</span>n</h1>
+        <h1>Horiseon</h1>
         <div>
             <ul>
                 <li>
@@ -26,13 +30,14 @@
     </div>
     <div class="hero"></div>
     <div class="content">
+        <div id="search-engine-optimization">
         <div class="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
             <h2>Search Engine Optimization</h2>
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
             </p>
-        </div>
+        </div></div>
         <div id="online-reputation-management" class="online-reputation-management">
             <img src="./assets/images/online-reputation-management.jpg" class="float-right" />
             <h2>Online Reputation Management</h2>
@@ -71,12 +76,12 @@
             </p>
         </div>
     </div>
-    <div class="footer">
+    <footer>
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
-            &copy; 2019 Horiseon Social Solution Services, Inc.
+            &copy; 2021 Horiseon Social Solution Services, Inc.
         </p>
-    </div>
+    </footer>
 </body>
 
 </html>
